# cfg-semantic-grounding

./: .gitignore  README.md  pyproject.toml
configs/agents/: claude_code.yaml  dummy.yaml  dummy2.yaml  gemini_cli.yaml  minisweagent.yaml  openhands.yaml  sweagent.yaml
configs/attacks/: bug_reports.yaml  fcv.yaml  none.yaml  swexploit.yaml  udora.yaml
configs/baselines/: agentic_guard.yaml  bandit.yaml  llama_guard.yaml  llama_prompt_guard.yaml  llm_judge.yaml  prompt_filter.yaml  prompt_rewrite.yaml  semgrep.yaml  sequence_classifiers.yaml  sequence_classifiers_inference.yaml  sequence_classifiers_train.yaml  structural_misalignment.yaml  structural_misalignment_test.yaml  test_new_parsers.yaml
configs/datasets/: lite.yaml  plus.yaml  pro.yaml  toy.yaml
configs/runs/: example_matrix.yaml  swebench_lite_starter.yaml
scripts/: bootstrap_env.sh  check_prereqs.py  export_results.py  init_dataset.py  init_structural_model.py  run_matrix.py  run_one.py
src/agent/: __init__.py  base.py  claude_code.py  cli_wrapper.py  dummy.py  gemini_cli.py  minisweagent.py  openhands.py  registry.py  sweagent.py
src/attack/: __init__.py  base.py  bug_reports.py  fcv.py  none.py  registry.py  swexploit.py  udora.py
src/baseline/: __init__.py  agentic_guard.py  base.py  llama_guard.py  llama_prompt_guard.py  llm_judge.py  prompt_filter.py  prompt_rewrite.py  registry.py  sequence_classifiers.py  static_bandit.py  static_semgrep.py  structural_misalignment.py
src/common/: artifact_store.py  artifacts.py  config.py  diff.py  hashing.py  llm.py  logging.py  prompt_templates.py  (+6 more)
(+60 files in other folders)
